fix(updateMunicipality): remove the apis reguard the update a munipality user - fix swagger with these modify - fix swagger for municiplaityroles and cicitzendroles
